--- a/style.css
+++ b/style.css
@@ -1,27 +1,42 @@
 /** @format */
 
+header {
+  max-width: 1680px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h1 {
+  font-family: Montserrat;
+  font-size: 56px;
+  line-height: 80px;
+  text-align: center;
+  letter-spacing: -0.015em;
+  color: #000000;
+}
+
 .btn {
-    font-family: Montserrat;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 21px;
-    letter-spacing: -0.015em;
-    color: #18a0fb;
-    text-decoration: none;
-    border: 1px solid #18a0fb;
-    box-sizing: border-box;
-    border-radius: 6px;
-    width: 192px;
-    height: 52px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 12px;
-    cursor: pointer;
-  }
-  
-  .btn_accent {
-    background: #18a0fb;
-    color: #fff;
-  }
-  
+  font-family: Montserrat;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 21px;
+  letter-spacing: -0.015em;
+  color: #18a0fb;
+  text-decoration: none;
+  border: 1px solid #18a0fb;
+  box-sizing: border-box;
+  border-radius: 6px;
+  width: 192px;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 12px;
+  cursor: pointer;
+}
+
+.btn_accent {
+  background: #18a0fb;
+  color: #fff;
+}
