--- a/style.css
+++ b/style.css
@@ -2,11 +2,18 @@
 
 header {
   max-width: 1680px;
+  height: 960px;
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
+
+.bg_header {
+  background: url(images/video_placeholder.png);
+}
+
 h1 {
   font-family: Montserrat;
   font-size: 56px;
@@ -14,6 +21,10 @@ h1 {
   text-align: center;
   letter-spacing: -0.015em;
   color: #000000;
+}
+
+.bg_header__title {
+  margin-top: 390px;
 }
 
 .btn {
