--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   background: #f2f2f2;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .top_header {
@@ -154,11 +155,53 @@ h2 {
   padding: 10px;
 }
 
+.parg_title {
+  margin: auto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: -0.015em;
+  text-align: left;
+}
+
+.card_titles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 72px;
+  letter-spacing: -0.015em;
+  color: #000000;
+}
+
 .card {
   width: 45%;
   min-width: 300px;
   padding: 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.middle_text {
+  position: absolute;
+  width: 686px;
+  height: 90px;
+  left: 80px;
+  top: 384px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: -0.015em;
+  color: rgba(0, 0, 0, 0.8);
 }
 /*# sourceMappingURL=style.css.map */
