--- a/style.scss
+++ b/style.scss
@@ -125,7 +125,7 @@ h2 {
 }
 
 .parg_title { 
-  margin: auto;
+  margin: 36px 0px 10px 0px;
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
@@ -137,7 +137,6 @@ h2 {
 .card_titles {
   display: flex;
   position: relative;
-  font-style: normal;
   font-weight: normal;
   font-size: 48px;
   line-height: 72px;
@@ -154,17 +153,12 @@ h2 {
   justify-content: space-around;
 }
 
-.middle_text { 
-  position: absolute;
-  width: 686px;
-  height: 90px;
+.middle_teksts {
+  margin: 24px 0 36px 0;
   left: 80px;
   top: 384px;
   font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
   font-size: 18px;
   line-height: 30px;
   letter-spacing: -0.015em;
-  color: rgba(0, 0, 0, 0.8);
 }
