--- a/style.scss
+++ b/style.scss
@@ -369,3 +369,74 @@ h2 {
   display: flex;
   margin-left: 144px;
 }
+
+.footer_main { 
+  background: bkack; 
+}
+
+.footer_mm {
+  background: black;
+}
+
+.footer_top { 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 120px 20px 48px 20px;
+}
+
+.tteksts { 
+  display: flex;
+}
+
+.footer_top a { 
+  height: 24px;
+  text-decoration: none;
+  margin-bottom: 15px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 19px;
+  line-height: 24px;
+  letter-spacing: -0.015em;
+  color: #000000;
+}
+
+.footer_logo { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.under_logo {
+  margin-right: 148px; 
+  margin-left: 148px;
+}
+
+.footer_ikonas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px; 
+}
+
+.footer_ikonas a { 
+  display: flex;
+  margin-left: 21px;
+}
+
+.footer_teksts { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 65px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: -0.015em;
+  color: rgba(0, 0, 0, 0.8);
+}
